Upgrade to `Agrona` 2.3.0-rc1 and fix `ShutdownSignalBarrier` usage.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,7 +4,7 @@ junitPlatformVersion = "1.13.2"
 checkstyleVersion = "11.0.1"
 aeronVersion = "1.48.6"
 sbeVersion = "1.35.6"
-agronaVersion = "2.2.4"
+agronaVersion = "2.3.0-rc1"
 slf4jVersion = "2.0.17"
 logbackVersion = "1.5.18"
 mockitoVersion = "5.18.0"
