--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,7 +3,7 @@ junitVersion = "6.0.0"
 checkstyleVersion = "11.1.1"
 aeronVersion = "1.49.0"
 sbeVersion = "1.36.0"
-agronaVersion = "2.3.0-rc1"
+agronaVersion = "2.3.0"
 slf4jVersion = "2.0.17"
 logbackVersion = "1.5.18"
 mockitoVersion = "5.19.0"
